# Automatic-Speech-Recognition-ASR-ONNX

./: .gitignore  PROJECT_STATUS.md  README.md  analyze_performance.py  pyproject.toml
Fun_ASR_Nano/: Export_Fun_ASR_Nano.py  Inference_Fun_ASR_Nano_ONNX.py  Optimize_ONNX.py
otel/: README.md  otel-collector-config.yaml  start_otel_collector_docker.sh  stop_otel_collector_docker.sh
