[project]
name = "automatic-speech-recognition-asr-onnx"
version = "0.1.0"
description = "Fun ASR Nano ONNX Export and Inference"
requires-python = ">=3.10"  # 更新为 3.10+ 以支持 onnx>=1.20.0 和 numba>=0.56.0
dependencies = [
    "torch",
    "torchaudio",
    "numpy",
    "onnxruntime>=1.22.0",  # 需要 >= 1.22.0 以支持 matmul_nbits_quantizer (int4量化)
    "onnxruntime-extensions",  # 用于 onnxruntime.transformers.optimizer
    "onnxslim",  # ONNX模型优化工具
    "onnx>=1.20.0",  # ONNX模型处理，需要较新版本以支持INT4
    "pydub",
    "funasr",
    "transformers",
    "numba>=0.56.0",  # 固定版本以解决 Python 3.10+ 编译问题（0.47.0 不支持 Python 3.10）
    # llvmlite 版本会自动解析为与 numba 兼容的版本
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["pyproject.toml"]

